Fix spacing

--- a/packages/web/styles/LoadCreateKey.module.scss
+++ b/packages/web/styles/LoadCreateKey.module.scss
@@ -4,7 +4,7 @@
   justify-content: center;
   height: 100%;
   flex-direction: column;
-  margin-top: -5vh;
+  //margin-top: -5vh;
 }
 
 .title_div {
